juice-shop-service.yml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-service
spec:
  selector:
    app: juice-shop                   # to expose this service to this deployment
  ports:
    - protocol: TCP
      port: 80                        # service port within the cluster
      targetPort: 3000                # Container port
  type: NodePort
